<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MainFragment">

        <Button
            android:id="@+id/btn_on_boarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_boarding" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_home" />

        <Button
            android:id="@+id/btn_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_list" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_location" />
    </LinearLayout>
</layout>
